Template now has a working list of movies
I print out the title and overview in the table

--- a/src/main/resources/templates/now-playing.html
+++ b/src/main/resources/templates/now-playing.html
@@ -6,5 +6,12 @@
 </head>
 <body>
 
+<table>
+    <tr th:each="movie : ${movies}">
+        <td th:text="${movie.title}"></td>
+        <td th:text="${movie.overview}"></td>
+    </tr>
+</table>
+
 </body>
 </html>
