--- a/src/main/resources/templates/now-playing.html
+++ b/src/main/resources/templates/now-playing.html
@@ -10,6 +10,8 @@
     <tr th:each="movie : ${movies}">
         <td th:text="${movie.title}"></td>
         <td th:text="${movie.overview}"></td>
+        <td th:text="${movie.popularity}"></td>
+        <td><img width="100" th:src="${movie.poster_path}"/></td>
     </tr>
 </table>
 
