--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,7 @@
 <body>
 
 <a href="/now-playing">Now Playing</a>
+<a href="/medium-popular-long-name">Medium Popular Long Name</a>
 
 </body>
 </html>
