Mashup sentences for overview complete

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,6 +8,7 @@
 
 <a href="/now-playing">Now Playing</a>
 <a href="/medium-popular-long-name">Medium Popular Long Name</a>
+<a href="/overview-mashup">Overview Mashup</a>
 
 </body>
 </html>
