Added some styling to display the movies

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,9 +6,14 @@
 </head>
 <body>
 
+<h1>Movie Project</h1>
+
 <a href="/now-playing">Now Playing</a>
+
 <a href="/medium-popular-long-name">Medium Popular Long Name</a>
+
 <a href="/overview-mashup">Overview Mashup</a>
+
 
 </body>
 </html>
