--- a/src/main/resources/templates/now-playing.html
+++ b/src/main/resources/templates/now-playing.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Now Playing</title>
+
+    <style>
+        td {padding: 5px; border-style: solid; border-width: 1px; border-radius: 4px;}
+    </style>
 </head>
 <body>
 
